@@ -3,6 +3,7 @@ package com.emu.apps.qcm.rest.controllers;
 
 import com.emu.apps.qcm.domain.model.question.TypeQuestion;
 import com.emu.apps.qcm.domain.repositories.DbRepositoryFixture;
+import com.emu.apps.qcm.infra.persistence.adapters.jpa.BaeldungPostgresqlExtension;
 import com.emu.apps.qcm.infra.persistence.adapters.jpa.config.SpringBootJpaTestConfig;
 import com.emu.apps.qcm.rest.controllers.secured.resources.QuestionResource;
 import com.emu.apps.qcm.rest.controllers.secured.resources.QuestionTagResource;
@@ -10,16 +11,21 @@ import com.emu.apps.qcm.rest.controllers.secured.resources.ResponseResource;
 import com.google.common.collect.Iterables;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.util.TestPropertyValues;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.web.server.LocalServerPort;
+import org.springframework.context.ApplicationContextInitializer;
+import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.util.UriComponentsBuilder;
@@ -34,7 +40,22 @@ import static org.assertj.core.api.Java6Assertions.assertThat;
 @SpringBootTest(classes = {SpringBootJpaTestConfig.class}, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @TestPropertySource("classpath:application-test.properties")
 @ActiveProfiles(value = "test")
+@ContextConfiguration(initializers = {QuestionRestControllerTest.Initializer.class})
 class QuestionRestControllerTest {
+
+    @RegisterExtension
+    static BaeldungPostgresqlExtension postgresqlContainer = BaeldungPostgresqlExtension.getInstance();
+
+    static class Initializer
+            implements ApplicationContextInitializer <ConfigurableApplicationContext> {
+        public void initialize(ConfigurableApplicationContext configurableApplicationContext) {
+            TestPropertyValues.of(
+                    "spring.datasource.url=" + postgresqlContainer.getJdbcUrl(),
+                    "spring.datasource.username=" + postgresqlContainer.getUsername(),
+                    "spring.datasource.password=" + postgresqlContainer.getPassword()
+            ).applyTo(configurableApplicationContext.getEnvironment());
+        }
+    }
 
     private static final String QUESTIONS_URI = ApiRestMappings.PROTECTED_API + ApiRestMappings.QUESTIONS;
 
@@ -48,6 +69,7 @@ class QuestionRestControllerTest {
 
     private static final String RESPONSE2 = "response 2";
 
+    private ResourceFixture fixture = new ResourceFixture();
     @LocalServerPort
     private int port;
 
@@ -63,24 +85,30 @@ class QuestionRestControllerTest {
         dbFixture.createAccountTest();
     }
 
-    private QuestionResource createQuestionResources() {
-        QuestionResource questionResource = new QuestionResource();
-        questionResource.setQuestionText(QUESTION1);
+    public class ResourceFixture{
+        private ResourceFixture() {
+        }
 
-        ResponseResource responseResource = new ResponseResource();
-        responseResource.setResponseText(RESPONSE1);
-        responseResource.setGood(true);
+        public  QuestionResource createQuestionResources() {
 
-        questionResource.setResponses(Arrays.asList(responseResource));
+            var questionResource = new QuestionResource();
+            questionResource.setQuestionText(QUESTION1);
 
-        var questionTagResources = new QuestionTagResource();
-        questionTagResources.setLibelle(TAG1);
+            var responseResource = new ResponseResource();
+            responseResource.setResponseText(RESPONSE1);
+            responseResource.setGood(true);
 
-        questionResource.setTags(List.of(questionTagResources));
+            questionResource.setResponses(Arrays.asList(responseResource));
 
-        questionResource.setType(TypeQuestion.FREE_TEXT.name());
+            var questionTagResources = new QuestionTagResource();
+            questionTagResources.setLibelle(TAG1);
 
-        return questionResource;
+            questionResource.setTags(List.of(questionTagResources));
+
+            questionResource.setType(TypeQuestion.FREE_TEXT.name());
+
+            return questionResource;
+        }
     }
 
     @Test
@@ -89,7 +117,7 @@ class QuestionRestControllerTest {
         // create a new question
         final ResponseEntity <QuestionResource> postResponse = restTemplate
                 .exchange(getURL(QUESTIONS_URI), HttpMethod.POST,
-                        new HttpEntity <>(createQuestionResources(),
+                        new HttpEntity <>(fixture.createQuestionResources(),
                                 headers()), QuestionResource.class);
 
         assertThat(postResponse.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
@@ -152,7 +180,7 @@ class QuestionRestControllerTest {
 
         // create a new question
         final ResponseEntity <QuestionResource> postResponse = restTemplate
-                .exchange(getURL(QUESTIONS_URI), HttpMethod.POST, new HttpEntity <>(createQuestionResources(), headers()), QuestionResource.class);
+                .exchange(getURL(QUESTIONS_URI), HttpMethod.POST, new HttpEntity <>(fixture.createQuestionResources(), headers()), QuestionResource.class);
         assertThat(postResponse.getBody()).isNotNull();
 
         // get the question
@@ -181,7 +209,7 @@ class QuestionRestControllerTest {
         final HttpHeaders httpHeaders = headers();
         // create a new question
         final ResponseEntity <QuestionResource> postResponse = restTemplate
-                .exchange(getURL(QUESTIONS_URI), HttpMethod.POST, new HttpEntity <>(createQuestionResources(), httpHeaders), QuestionResource.class);
+                .exchange(getURL(QUESTIONS_URI), HttpMethod.POST, new HttpEntity <>(fixture.createQuestionResources(), httpHeaders), QuestionResource.class);
         assertThat(postResponse.getBody()).isNotNull();
         assertThat(postResponse.getBody().getUuid()).isNotNull();
 
